name:                unitparty
version:             0.1.0.0
synopsis:            Convert shekels per coulomb to kilotesla-fortnights
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              feivel jellyfish
maintainer:          walpurgisriot@gmail.com
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable unitparty
  main-is:             UnitParty.hs
  build-depends:       base, containers, parsec, random
  ghc-options: -Wall -Werror -fno-warn-missing-signatures

test-suite tests
  type: exitcode-stdio-1.0
  main-is: tests/tests.hs
  build-depends: base, containers, HUnit, QuickCheck, parsec
  
